tests/macros/select/plugin.rs
fn main() {
    let q = discourse::questions![Select { plugin: todo!() }];
}
